# CodeDeployGitHubDemo

./: Dockerfile  README.md  appspec.yml  buildspec.yml  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: workflow.yml
cdk/app/: app_stack.py
